 335.	[bug]		named would occasionally attempt recursion when
			it was disallowed or undesired.

 333.	[bug]		The resolver incorrectly accepted referrals to
			domains that were not parents of the query name,
			causing assertion failures.

 331.	[bug]		Only log "recursion denied" if RD is set. (RT #178)

	--- 9.0.0rc1 released ---

 329.	[func]		omapi_auth_register() now takes a size_t argument for
			the length of a key's secret data.  Previously
			OMAPI only stored secrets up to the first NUL byte.

 328.	[func]		Added isc_base64_decodestring().

 325.	[bug]		isc_lex_gettoken was processing octal strings when
			ISC_LEXOPT_CNUMBER was not set.

 324.	[func]		In the resolver, turn EDNS0 off if there is no
			response after a number of retransmissions.
			This is to allow queries some chance of succeeding
			even if all the authoritative servers of a zone
			silently discard EDNS0 requests instead of 
			sending an error response like they ought to.

 323.	[bug]		dns_rbt_findname() did not ignore empty rbt nodes.
			Because of this, servers authoritative for a parent 
			and grandchild zone but not authoritative for the
			intervening child zone did not correctly issue
			referrals to the servers of the child zone.

 322.	[bug]		Queries for KEY RRs are now sent to the parent 
			server before the authoritative one, making
			DNSSEC insecurity proofs work in many cases
			where they previously didn't.

 321.	[bug]		When synthesizing a CNAME RR for a DNAME
			response, query_addcname() failed to intitialize
			the type and class of the CNAME dns_rdata_t,
			causing random failures.

 320.	[func]		Multiple rndc changes: parses an rndc.conf file,
			uses authentication to talk to named, command
			line syntax changed.  This will all be described
			in the ARM.

 319.	[func]		The named.conf "controls" statement is now used
			to configure the OMAPI command channel.

 318.	[func]		dns_c_ndcctx_destroy() could never return anything